--- a/back/micro-services/microservice-user/src/main/resources/application.properties
+++ b/back/micro-services/microservice-user/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=3001
+jwt.secret.key=${JWT_SECRET_KEY}
 spring.application.name=microservice-user
 spring.datasource.url=jdbc:mysql://localhost:3306/MDD-USER
 spring.datasource.username=${USER_BDD}
