create article on postman

--- a/back/micro-services/microservice-article/src/main/resources/application.properties
+++ b/back/micro-services/microservice-article/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=3003
+jwt.secret.key=${JWT_SECRET_KEY}
 spring.application.name=microservice-article
 spring.datasource.url=jdbc:mysql://localhost:3306/MDD-ARTICLE
 spring.datasource.username=${USER_BDD}
 spring.datasource.password=${PWD_BDD}
+spring.mvc.servlet.path=/article
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
